tests/snapshots/parse__autobin.snap
---
source: tests/parse.rs
expression: m
---
Manifest {
    package: Some(
        Package {
            name: "auto-bin",
            edition: Some(
                Local(
                    E2018,
                ),
            ),
            version: Some(
                Local(
                    "0.1.0",
                ),
            ),
            build: None,
            workspace: None,
            authors: None,
            links: None,
            description: None,
            homepage: None,
            documentation: None,
            readme: None,
            keywords: None,
            categories: None,
            license: None,
            license_file: None,
            repository: None,
            metadata: None,
            rust_version: None,
            exclude: None,
            include: None,
            default_run: None,
            autobins: None,
            autoexamples: None,
            autotests: None,
            autobenches: None,
            publish: Some(
                Local(
                    Flag(
                        false,
                    ),
                ),
            ),
            resolver: None,
        },
    ),
    cargo_features: None,
    workspace: None,
    dependencies: None,
    dev_dependencies: None,
    build_dependencies: None,
    target: None,
    features: None,
    bin: [
        Product {
            path: Some(
                "src/main.rs",
            ),
            name: Some(
                "auto-bin",
            ),
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: Some(
                E2018,
            ),
            required_features: [],
            crate_type: Some(
                [
                    "bin",
                ],
            ),
        },
    ],
    bench: [],
    test: [],
    example: [],
    patch: None,
    lib: None,
    profile: None,
    badges: Some(
        Badges {
            appveyor: None,
            circle_ci: None,
            gitlab: None,
            travis_ci: Some(
                Badge {
                    repository: "…",
                    branch: "master",
                    service: None,
                    id: None,
                    project_name: None,
                },
            ),
            codecov: None,
            coveralls: None,
            is_it_maintained_issue_resolution: None,
            is_it_maintained_open_issues: None,
            maintenance: Maintenance {
                status: None,
            },
        },
    ),
}
