tests/snapshots/parse__build_dependencies_casing.snap
---
source: tests/parse.rs
expression: m
---
Manifest {
    package: Some(
        Package {
            name: "foo",
            edition: None,
            version: Local(
                "1",
            ),
            build: None,
            workspace: None,
            authors: None,
            links: None,
            description: None,
            homepage: None,
            documentation: None,
            readme: None,
            keywords: None,
            categories: None,
            license: None,
            license_file: None,
            repository: None,
            metadata: None,
            rust_version: None,
            exclude: None,
            include: None,
            default_run: None,
            autobins: true,
            autoexamples: true,
            autotests: true,
            autobenches: true,
            publish: None,
            resolver: None,
        },
    ),
    cargo_features: None,
    workspace: None,
    dependencies: None,
    dev_dependencies: None,
    build_dependencies: Some(
        {
            "lazy_static": Simple(
                "1.4.0",
            ),
        },
    ),
    target: None,
    features: None,
    bin: None,
    bench: None,
    test: None,
    example: None,
    patch: None,
    lib: None,
    profile: None,
    badges: None,
}
