tests/snapshots/parse__dev_dependencies_casing.snap
---
source: tests/parse.rs
expression: m
---
Manifest {
    package: Some(
        Package {
            name: "foo",
            edition: None,
            version: Some(
                Local(
                    "1",
                ),
            ),
            build: None,
            workspace: None,
            authors: None,
            links: None,
            description: None,
            homepage: None,
            documentation: None,
            readme: None,
            keywords: None,
            categories: None,
            license: None,
            license_file: None,
            repository: None,
            metadata: None,
            rust_version: None,
            exclude: None,
            include: None,
            default_run: None,
            autolib: None,
            autobins: None,
            autoexamples: None,
            autotests: None,
            autobenches: None,
            publish: None,
            resolver: None,
        },
    ),
    cargo_features: None,
    workspace: None,
    dependencies: None,
    dev_dependencies: Some(
        {
            "lazy_static": Simple(
                "1.4.0",
            ),
        },
    ),
    build_dependencies: None,
    target: None,
    features: None,
    bin: [],
    bench: [],
    test: [],
    example: [],
    patch: None,
    lib: None,
    profile: None,
    badges: None,
    lints: None,
}
