tests/snapshots/parse__package_inheritance.snap
---
source: tests/parse.rs
expression: m
---
Manifest {
    package: Some(
        Package {
            name: "bar",
            edition: None,
            version: Some(
                Inherited {
                    workspace: True,
                },
            ),
            build: None,
            workspace: None,
            authors: Some(
                Inherited {
                    workspace: True,
                },
            ),
            links: None,
            description: Some(
                Inherited {
                    workspace: True,
                },
            ),
            homepage: None,
            documentation: Some(
                Inherited {
                    workspace: True,
                },
            ),
            readme: None,
            keywords: None,
            categories: None,
            license: None,
            license_file: None,
            repository: None,
            metadata: None,
            rust_version: None,
            exclude: None,
            include: None,
            default_run: None,
            autobins: true,
            autoexamples: true,
            autotests: true,
            autobenches: true,
            publish: None,
            resolver: None,
        },
    ),
    cargo_features: None,
    workspace: None,
    dependencies: None,
    dev_dependencies: None,
    build_dependencies: None,
    target: None,
    features: None,
    bin: None,
    bench: None,
    test: None,
    example: None,
    patch: None,
    lib: None,
    profile: None,
    badges: None,
}
